--- a/Assignment 1/web/index.html
+++ b/Assignment 1/web/index.html
@@ -15,7 +15,25 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
         .titlecenter {
           margin: 0;
           position: absolute;
-          top: 40%;
+          top: 30%;
+          left: 50%;
+          -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+        }
+        
+        .textcenter {
+          margin: 0;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+        }
+        
+        .notecenter {
+          margin: 0;
+          position: absolute;
+          top: 70%;
           left: 50%;
           -ms-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -24,7 +42,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
         .buttoncenter {
           margin: 0;
           position: absolute;
-          top: 70%;
+          top: 90%;
           left: 50%;
           -ms-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -42,11 +60,20 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
         <div class="titlecenter">
             <h1>of Things Bay</h1>
         </div>
-        <div class="buttoncenter">
-            <button type="button" style="height:40px;width:100px" onClick="location.href='Register Page.jsp'">Register</button><br><br><br><br><br><br><br><br>
+        <div class="textcenter">
+            <form action="Welcome Page.jsp">
+                <label for="email">Email:</label><br><br>
+                <input type="email" id="email" name="email"><br><br>
+                <label for="password">Password:</label><br><br>
+                <input type="password" id="password" name="password"><br><br><br>
+                <input type="submit" value="Submit">
+            </form>
+        </div>
+        <div class="notecenter">
+            <h3>Don't have an account yet?</h3>
         </div>
         <div class="buttoncenter">
-            <button type="button" style="height:40px;width:100px" onClick="location.href='Login Page.jsp'">Login</button>
+            <button type="button" style="height:40px;width:100px" onClick="location.href='Register Page.jsp'">Register</button><br><br><br><br><br><br><br><br>
         </div>
     </div>
     </body>
